--- a/package.json
+++ b/package.json
@@ -38,6 +38,11 @@
     ]
   },
   "devDependencies": {
-    "canvas": "^2.9.3"
+    "@types/jest": "^28.1.8",
+    "@types/node": "^18.7.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "canvas": "^2.9.3",
+    "typescript": "^4.7.4"
   }
 }
